Con 99 atualização do domínio e rotas (#44)
* feat(front): centraliza URL da API em environment e adiciona config da Vercel

Substitui as URLs http://localhost:8080 fixas nos services por
environment.apiBase/wsBase, com fileReplacements para o build de
producao. Adiciona vercel.json (SPA rewrite + output do Angular).



* fix(front): corrige build de producao (bootstrap-icons e fonte Inter)

Declara bootstrap-icons no package.json (era importado no styles.css
sem estar nas dependencias, quebrando o build) e move a fonte Inter
do @import em primeiro-acesso.css para um <link> no index.html,
evitando estourar o budget de CSS de componente.



* refactor(back): parametriza datasource/porta e unifica CORS por ambiente

Le datasource (Neon), porta (Railway) e origens de CORS de variaveis
de ambiente em application.properties. Remove o CorsConfig duplicado
e os @CrossOrigin fixos dos controllers, centralizando as origens em
app.cors.allowed-origins (HTTP e WebSocket).



* docs: adiciona guia de deploy (Vercel + Railway + Neon)





A criacao do primeiro usuario (admin) ja e feita no cadastro de
empresa (POST /api/empresas com nomeAdmin/emailAdmin/senhaAdmin).
A pasta primeiro-acesso era um prototipo antigo com empresa/1 fixa,
sem rota nem link, entao foi removida.





Datasource (url/usuario/senha) vem 100% de variavel de ambiente, sem
default no codigo. Porta usa PORT do Railway. Sem segredos no arquivo.



* chore(back): remove Flyway nao utilizado

A pasta db/migration estava vazia e o schema e gerado pelo Hibernate
(ddl-auto=update). Remove flyway-database-postgresql, o starter de teste,
a pasta vazia e a propriedade spring.flyway.enabled.



* chore: removendo md desnecessario

---------